--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -44,7 +44,7 @@ jobs:
     name: Test Release Assets
     runs-on: ubuntu-latest
     if: startsWith(github.ref, 'refs/tags/')
-    needs: [bats-tests, integration-tests, test-inputs, lint]
+    needs: [bats-tests, lint]
     steps:
       - uses: actions/checkout@v4
 
